--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "firebase": "^11.4.0",
+    "firebase-tools": "^13.32.0",
     "html5-qrcode": "^2.3.8",
     "lucide-react": "^0.441.0",
     "next-themes": "^0.3.0",
